test-ingress-proces/sampleapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - http:
        paths:
        - path: /tst
          pathType: Prefix
          backend:
            service:
              name: web
              port:
                number: 8080
  ingressClassName: nginx
